# ruster

./: Cargo.toml  README.md
src/: atom.rs  binary.rs  initmacro.rs  lib.rs  privdata.rs  resource.rs  rustermacro.rs  tuple.rs
tests/: start_erl_test.rs  tests.rs
tests/test_app/: Makefile  erlang.mk  relx.config
tests/test_app/crates/test_nif/: Cargo.toml
tests/test_app/crates/test_nif/src/: lib.rs
tests/test_app/rel/: vm.args
tests/test_app/src/: test_nif.erl
tests/testapp/: mynifmod.erl
tests/testapp/crates/mynifmod/: Cargo.toml
tests/testapp/crates/mynifmod/src/: lib.rs
